--- a/index.html
+++ b/index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>N1zyx3</title>
-    <link rel="stylesheet" href="index.css">
+  <meta charset="UTF-8" />
+  <title>Tesseract 4D</title>
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-    <header>
-        <div class="navbar">
-            <a href="index.html" class="brand"><img src="imgs/logo.png" alt="logo"><span class="logo">N1zyx3</span></a><a href="projects.html">PROJECTS</a>
-        </div>
-    </header>
-    <main>
-        <h1>N1zyx3</h1>
-        <h2>Genius, billionaire, playboy, philanthropist, or just a N1zyx3</h2>
-    </main>
-    <footer>
-        <p>&copy; 2025 N1zyx3. Все права защищены.</p>
-    </footer>
-    <script src="js/index.js"></script>
+
+<div id="hint">Move mouse to rotate the 4D tesseract</div>
+
+<script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
-
