--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <title>Tesseract 4D</title>
-  <link rel="stylesheet" href="index.css" />
-</head>
-<body>
-
-<div id="hint">Move mouse to rotate the 4D tesseract</div>
-
-<script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
-<script src="index.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Tesseract 4D</title>
+        <link rel="stylesheet" href="index.css" />
+    </head>
+    <body>
+        <div id="ui">
+            <div id="brand">
+                <img src="cat.jpg" alt="cat"/>
+                <span>N1zyyy</span>
+            </div>
+            <a id="projects-link" href="https://youtu.be/dQw4w9WgXcQ?si=R07IPiT7KUeKUOKW">Projects</a>
+        </div>
+        <div id="hint">Move mouse to rotate the 4D tesseract</div>
+        <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
+        <script src="index.js"></script>
+    </body>
 </html>
