--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8" />
-        <title>Tesseract 4D</title>
+        <title>N1zyx3 - Main</title>
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
         <div id="ui">
             <div id="brand">
                 <img src="cat.jpg" alt="cat"/>
-                <span>N1zyyy</span>
+                <span>N1zyx3</span>
             </div>
             <a id="projects-link" href="https://youtu.be/dQw4w9WgXcQ?si=R07IPiT7KUeKUOKW">Projects</a>
         </div>
