--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Проекты — N1zyx3</title>
+    <title>Projects — N1zyx3</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
         <h2>Скоро здесь появится список моих работ.</h2>
     </main>
     <footer>
-        <p>&copy; 2025 N1zyx3. Все права защищены.</p>
+        <p>&copy; 2026 N1zyx3. Все права защищены.</p>
     </footer>
     <script src="index.js"></script>
 </body>
