Add urls for avatar

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <body>
         <div id="ui">
             <div id="brand">
-                <img src="cat.jpg" alt="cat"/>
-                <span>N1zyx3</span>
+                <a href="about.html"><img src="cat.jpg" alt="cat"/></a>
             </div>
             <a id="projects-link" href="https://youtu.be/dQw4w9WgXcQ?si=R07IPiT7KUeKUOKW">Projects</a>
         </div>
