small update for nothing

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <div id="ui">
             <div id="brand">
-                <a href="about.html"><img src="cat.jpg" alt="cat"/></a>
+                <a href="about.html"><img src="assets/imgs/cat.jpg" alt="cat"/></a>
             </div>
-            <a id="projects-link" href="https://youtu.be/dQw4w9WgXcQ?si=R07IPiT7KUeKUOKW">Projects</a>
+            <a id="projects-link" href="assets/source.mp4">Projects</a>
         </div>
         <div id="hint">Move mouse to rotate the 4D tesseract</div>
         <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
